--- a/src/main/resources/static/styles/subasta.css
+++ b/src/main/resources/static/styles/subasta.css
@@ -1,5 +1,3 @@
-.carousel-inner .item img {
-	border-radius: 0px 0px 0 0;
-	max-height: 480px;
-	overflow: hidden;
+body {
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; 
 }
